rdrf #2406 allowed text customisations for consents

--- a/rdrf/rdrf/templates/rdrf_cdes/consent_list.html
+++ b/rdrf/rdrf/templates/rdrf_cdes/consent_list.html
@@ -51,7 +51,7 @@
     <br>
     
     <blockquote>
-        <b>{% trans "Patient Consents" %}</b> - {{registry}}
+        <b>{{consents_blurb}}</b> - {{registry}}
     </blockquote>
 
     <p class="pull-right">
