--- a/rdrf/rdrf/static/css/rdrf.css
+++ b/rdrf/rdrf/static/css/rdrf.css
@@ -261,7 +261,8 @@ form .aligned ul.errorlist {
 }
 
 .dashboard-container {
-    padding-left: 30px;
+    width: 100%;
+    padding-top: 30px;
 }
 
 .sidebar-bg {
